--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react-router-dom": "^6.11.2",
     "sass": "^1.62.1",
     "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "prettier": "2.8.8"
   }
 }
