--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
     "axios": "^1.4.0",
+    "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.4.1",
+    "i18next": "^22.5.1",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "sass": "^1.62.1",
+    "stripe": "^12.9.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
