--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
     "axios": "^1.4.0",
-    "body-parse": "^0.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.4.1",
@@ -22,6 +22,7 @@
     "i18next-http-backend": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-material-ui-carousel": "^3.4.2",
